[main] добавлена базовая синхронизация заметок с сервером
