# inklumin-back/src/main/java/ru/inklumin/inkluminapi/dto/SaveNotesDataRequest.java
@@ -1,0 +1,10 @@
+package ru.inklumin.inkluminapi.dto;
+
+import jakarta.validation.constraints.NotBlank;
+import lombok.Data;
+
+@Data
+public class SaveNotesDataRequest {
+  @NotBlank(message = "Notes data is required")
+  private String notesData;
+}
