# inklumin-back/src/main/java/ru/inklumin/inkluminapi/entity/UserNotesData.java
@@ -1,0 +1,38 @@
+package ru.inklumin.inkluminapi.entity;
+
+import jakarta.persistence.*;
+import java.time.LocalDateTime;
+import lombok.Data;
+import org.hibernate.annotations.CreationTimestamp;
+import org.hibernate.annotations.UpdateTimestamp;
+
+@Entity
+@Data
+@Table(name = "user_notes_data")
+public class UserNotesData {
+  @Id
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  private Long id;
+
+  @ManyToOne(fetch = FetchType.LAZY)
+  @JoinColumn(name = "user_id", nullable = false)
+  private User user;
+
+  @Column(columnDefinition = "TEXT")
+  private String notesData;
+
+  @CreationTimestamp
+  @Column(name = "created_at")
+  private LocalDateTime createdAt;
+
+  @UpdateTimestamp
+  @Column(name = "updated_at")
+  private LocalDateTime updatedAt;
+
+  public UserNotesData() {}
+
+  public UserNotesData(User user, String notesData) {
+    this.user = user;
+    this.notesData = notesData;
+  }
+}
